--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,8 @@
-PORT=2000
-BINANCE_ENDPOINT=https://bsc-dataseed1.binance.org/
-MOONGOOSE_URL=mongodb+srv://1percent:1percent@cluster0-4gult.mongodb.net/kyc?retryWrites=true&w=majority
-API_KEY=61eff3ac89aaf04046ca598d
-RPC_SOCKET_URI="wss://falling-skilled-brook.bsc-testnet.quiknode.pro/5fe6b5b524b2f04a02e6914f7b1eabeb233f829e/"
-PROJECT_CREATION_CONTRACT_ADDRESS = "0x1A96ea8EAB3bF6EC23ae58cd84a5e0f0b81627B6"
 
+#Will add runtime on server currently just for testing paste env here
+
+PORT=2000
+MOONGOOSE_URL=mongodb+srv://1percent:1percent@cluster0-4gult.mongodb.net/kyc?retryWrites=true&w=majority
 RPC_URI=https://falling-dry-pool.base-sepolia.quiknode.pro/a1e625b4a4d23ccd0d37043c68b2f3d1892a59ec/
 SOCKET_URI=wss://falling-dry-pool.base-sepolia.quiknode.pro/a1e625b4a4d23ccd0d37043c68b2f3d1892a59ec/
 CONTRACT_ADDRESS=0xd3DBc6367C27842146A3Af6c8Ad56C52a70Eb42D
